--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,10 @@ a {
     cursor: pointer;
 }
 
+a:hover {
+    text-decoration: underline;
+}
+
 header {
     width: 100%;
     height: 60px;
@@ -49,7 +53,7 @@ nav .nav-right-section img {
 }
 
 main {
-    margin-top: 150px;
+    margin-top: 70px;
     text-align: center;
 }
 
@@ -83,7 +87,7 @@ main .main-input input {
     height: 40px;
     border: none;
     outline: none;
-    margin-left: 5px;
+    margin-left: 10px;
     margin-right: 5px;
 }
 
@@ -97,8 +101,8 @@ main .main-input .serch-icon {
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
-    width: 18px;
-    height: 18px;
+    width: 16px;
+    height: 16px;
 }
 
 main .main-input .micro-icon {
@@ -110,3 +114,64 @@ main .main-input .micro-icon {
     height: 18px;
 }
 
+main .main-button {
+    width: 530px;
+    margin: 0 auto;
+}
+
+main .main-button div {
+    display: inline-block;
+}
+
+main .main-button button {
+    height: 36px;
+    background-color: #f8f9fa;
+    border: 1px solid #f8f9fa;
+    border-radius: 5px;
+    font-size: 14px;
+    color: #3c4043;
+    padding: 0 16px;
+    margin-right: 14px;
+}
+
+main .main-button button:hover {
+    border: 1px solid #c6c6c6;
+    box-shadow: 0 1px 1px #0000001a;
+    color: #202124;
+}
+
+footer {
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    background-color: #f2f2f2;
+    border-top: 1px solid #dadce0;
+    font-size: 13px;
+}
+
+
+footer ul {
+    margin: 10px;
+    list-style: none;
+    display: flex;
+    padding-left: 0;
+    align-items: center;
+}
+
+footer .footer-left {
+    justify-self: left;
+}
+
+footer .footer-right {
+    justify-self: right;
+}
+
+footer ul li a {
+    margin: 10px;
+    color: #70757a;
+    font-size: 14px;
+}
